--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,178 @@
 @import url("https://cdn.skypack.dev/normalize.css@8.0.1");
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: var(--html-font-size);
+  line-height: var(--html-line-height);
+  -webkit-tap-highlight-color: transparent;
+}
+
+body {
+  background-color: var(--body-bg);
+  color: var(--body-font-color);
+  font-family: var(--body-font-family);
+  font-size: var(--font-size);
+  overflow-x: hidden;
+  text-rendering: optimizeLegibility;
+}
+
+a {
+  color: var(--link-color);
+  outline: none;
+  text-decoration: none;
+}
+
+a:focus {
+  box-shadow: var(--shadow-1);
+}
+
+a:focus,
+a:hover,
+a:active,
+a.active {
+  color: var(--link-color-dark);
+  text-decoration: underline;
+}
+
+a:visited {
+  color: var(--link-color-light);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: inherit;
+  font-weight: 500;
+  line-height: 1.2;
+  margin-bottom: 0.5em;
+  margin-top: 0;
+}
+
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  font-weight: 500;
+}
+
+h1,
+.h1 {
+  font-size: 2rem;
+}
+
+h2,
+.h2 {
+  font-size: 1.6rem;
+}
+
+h3,
+.h3 {
+  font-size: 1.4rem;
+}
+
+h4,
+.h4 {
+  font-size: 1.2rem;
+}
+
+h5,
+.h5 {
+  font-size: 1rem;
+}
+
+h6,
+.h6 {
+  font-size: 0.8rem;
+}
+
+p {
+  margin: 0 0 var(--line-height);
+}
+
+a,
+ins,
+u {
+  text-decoration-skip: ink edges;
+}
+
+abbr[title] {
+  border-bottom: var(--border-width) dotted;
+  cursor: help;
+  text-decoration: none;
+}
+
+kbd {
+  /* @include label-base();
+  @include label-variant($light-color, $dark-color); */
+  font-size: var(--font-size-sm);
+}
+
+mark {
+  /* @include label-variant($body-font-color, $highlight-color); */
+  /* border-bottom: var(--unit-o) solid darken(var(--highlight-color), 15%); */
+  border-radius: var(--border-radius);
+  padding: var(--unit-o) var(--unit-h) 0;
+}
+
+blockquote {
+  border-left: var(--border-width-lg) solid var(--border-color);
+  margin-left: 0;
+  padding: var(--unit-2) var(--unit-4);
+}
+
+blockquote p:last-child {
+  margin-bottom: 0;
+}
+
+ul,
+ol {
+  margin: var(--unit-4) 0 var(--unit-4) var(--unit-4);
+  padding: 0;
+}
+
+ul ul,
+ul ol,
+ol ul,
+ol ol {
+  margin: var(--unit-4) 0 var(--unit-4) var(--unit-4);
+}
+
+ul li,
+ol li {
+  margin-top: var(--unit-2);
+}
+
+ul {
+  list-style: disc inside;
+}
+
+ul ul {
+  list-style-type: circle;
+}
+
+ol {
+  list-style: decimal inside;
+}
+
+ol ol {
+  list-style-type: lower-alpha;
+}
+
+dl dt {
+  font-weight: bold;
+}
+
+dl dd {
+  margin: var(--unit-2) 0 var(--unit-4) 0;
+}
